workspace-sf/force-app/main/default/objects/public_retorno__x/public_retorno__x.object-meta.xml
<CustomObject>
    <description>public$retorno</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$retorno</externalName>
    <label>public$retorno</label>
    <pluralLabel>public$retorno</pluralLabel>
</CustomObject>