workspace-sf/force-app/main/default/objects/public_retorno__x/fields/codigocritica__c.field-meta.xml
<CustomField>
    <fullName>codigocritica__c</fullName>
    <description>codigocritica</description>
    <externalDeveloperName>codigocritica</externalDeveloperName>
    <label>codigocritica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>