workspace-sf/force-app/main/default/objects/public_retorno__x/fields/competencia__c.field-meta.xml
<CustomField>
    <fullName>competencia__c</fullName>
    <description>competencia</description>
    <externalDeveloperName>competencia</externalDeveloperName>
    <label>competencia</label>
    <type>Date</type>
</CustomField>