workspace-sf/force-app/main/default/objects/public_retorno__x/fields/cpf__c.field-meta.xml
<CustomField>
    <fullName>cpf__c</fullName>
    <description>cpf</description>
    <externalDeveloperName>cpf</externalDeveloperName>
    <label>cpf</label>
    <length>11</length>
    <type>Text</type>
</CustomField>