workspace-sf/force-app/main/default/objects/public_retorno__x/fields/datastatussinistro__c.field-meta.xml
<CustomField>
    <fullName>datastatussinistro__c</fullName>
    <description>datastatussinistro</description>
    <externalDeveloperName>datastatussinistro</externalDeveloperName>
    <label>datastatussinistro</label>
    <type>Date</type>
</CustomField>