workspace-sf/force-app/main/default/objects/public_retorno__x/fields/estipulante__c.field-meta.xml
<CustomField>
    <fullName>estipulante__c</fullName>
    <description>estipulante</description>
    <externalDeveloperName>estipulante</externalDeveloperName>
    <label>estipulante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>