workspace-sf/force-app/main/default/objects/public_retorno__x/fields/idlote__c.field-meta.xml
<CustomField>
    <fullName>idlote__c</fullName>
    <description>idlote</description>
    <externalDeveloperName>idlote</externalDeveloperName>
    <label>idlote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>