workspace-sf/force-app/main/default/objects/public_retorno__x/fields/nome__c.field-meta.xml
<CustomField>
    <fullName>nome__c</fullName>
    <description>nome</description>
    <externalDeveloperName>nome</externalDeveloperName>
    <label>nome</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>