workspace-sf/force-app/main/default/objects/public_retorno__x/fields/numerocampo__c.field-meta.xml
<CustomField>
    <fullName>numerocampo__c</fullName>
    <description>numerocampo</description>
    <externalDeveloperName>numerocampo</externalDeveloperName>
    <label>numerocampo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>