workspace-sf/force-app/main/default/objects/public_retorno__x/fields/numerocontratoparceiro__c.field-meta.xml
<CustomField>
    <fullName>numerocontratoparceiro__c</fullName>
    <description>numerocontratoparceiro</description>
    <externalDeveloperName>numerocontratoparceiro</externalDeveloperName>
    <label>numerocontratoparceiro</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>