workspace-sf/force-app/main/default/objects/public_retorno__x/fields/numeroparcela__c.field-meta.xml
<CustomField>
    <fullName>numeroparcela__c</fullName>
    <description>numeroparcela</description>
    <externalDeveloperName>numeroparcela</externalDeveloperName>
    <label>numeroparcela</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>