workspace-sf/force-app/main/default/objects/public_retorno__x/fields/numeroserie__c.field-meta.xml
<CustomField>
    <fullName>numeroserie__c</fullName>
    <description>numeroserie</description>
    <externalDeveloperName>numeroserie</externalDeveloperName>
    <label>numeroserie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>