workspace-sf/force-app/main/default/objects/public_retorno__x/fields/numerosinistroporto__c.field-meta.xml
<CustomField>
    <fullName>numerosinistroporto__c</fullName>
    <description>numerosinistroporto</description>
    <externalDeveloperName>numerosinistroporto</externalDeveloperName>
    <label>numerosinistroporto</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>