workspace-sf/force-app/main/default/objects/public_retorno__x/fields/numerosorte__c.field-meta.xml
<CustomField>
    <fullName>numerosorte__c</fullName>
    <description>numerosorte</description>
    <externalDeveloperName>numerosorte</externalDeveloperName>
    <label>numerosorte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>