workspace-sf/force-app/main/default/objects/public_retorno__x/fields/tiporegistrocritica__c.field-meta.xml
<CustomField>
    <fullName>tiporegistrocritica__c</fullName>
    <description>tiporegistrocritica</description>
    <externalDeveloperName>tiporegistrocritica</externalDeveloperName>
    <label>tiporegistrocritica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>